--- a/DockingAdminPanel/Views/Shared/Components/MenuSideBar/Default.cshtml
+++ b/DockingAdminPanel/Views/Shared/Components/MenuSideBar/Default.cshtml
@@ -1,4 +1,7 @@
-﻿<!-- ========== Left Sidebar Start ========== -->
+﻿@model UserViewModel
+
+
+<!-- ========== Left Sidebar Start ========== -->
 @if (User.Identity.IsAuthenticated)
 {
     @*<div class="col-md-4 col-xl-4 col-lg-4">
@@ -46,28 +49,33 @@
             </div>
         </nav>
     </div>*@
-    <header class="header" style="background:#0e1c36" id="header">
+    @if (Model != null && Model.role == "Super Admin")
+    {
+        <header class="header" style="background:#0e1c36" id="header">
 
-        <div class="header_toggle" style="color:#fff"> <i class='bx bx-menu' id="header-toggle"></i> </div>
-        <div class="header_img float-right"> <img src="https://i.imgur.com/hczKIze.jpg" alt=""> </div>
-        <a asp-action="logout" asp-controller="Account" class="nav_link"> <i class='bx bx-log-out nav_icon'></i> <span class="nav_name">SignOut</span> </a>
-    </header>
-
-    <div class="l-navbar" id="nav-bar">
-        <nav class="nav">
-            <div>
-                <a href="#" class="nav_logo"> <i class='bx bx-layer nav_logo-icon'></i> <span class="nav_logo-name">Admin Panel</span> </a>
-                <div class="nav_list">
-                    <a asp-action="index" asp-controller="Products" class="nav_link active"><i class='bx bx-anchor'></i>  <span class="nav_name">Products</span> </a>
-                    <a asp-action="allusers" asp-controller="Account" class="nav_link"> <i class='bx bx-user nav_icon'></i> <span class="nav_name">Users</span> </a>
-                    <a asp-action="PendingItems" asp-controller="Products" class="nav_link"> <i class='bx bx-message-square-detail nav_icon'></i> <span class="nav_name">Messages</span> </a>
-                    <a asp-action="PendingItems" asp-controller="Products" class="nav_link"> <i class='bx bx-question-mark bx-tada bx-flip-vertical'></i><span class="nav_name">Pending Dockings</span> </a>
-                    <a href="#" class="nav_link"> <i class='bx bx-folder nav_icon'></i> <span class="nav_name">Files</span> </a> 
-                    <a href="#" class="nav_link"> <i class='bx bx-bar-chart-alt-2 nav_icon'></i> <span class="nav_name">Stats</span> </a> </div>
-            </div>
+            <div class="header_toggle" style="color:#fff"> <i class='bx bx-menu' id="header-toggle"></i> </div>
+            <div class="header_img float-right"> <img src="https://i.imgur.com/hczKIze.jpg" alt=""> </div>
             <a asp-action="logout" asp-controller="Account" class="nav_link"> <i class='bx bx-log-out nav_icon'></i> <span class="nav_name">SignOut</span> </a>
-        </nav>
-    </div>
+        </header>
+
+        <div class="l-navbar" id="nav-bar">
+            <nav class="nav">
+                <div>
+                    <a href="#" class="nav_logo"> <i class='bx bx-layer nav_logo-icon'></i> <span class="nav_logo-name">Admin Panel</span> </a>
+                    <div class="nav_list">
+                        <a asp-action="index" asp-controller="Products" class="nav_link "><i class='bx bx-anchor'></i>  <span class="nav_name">Products</span> </a>
+                        <a asp-action="allusers" asp-controller="Account" class="nav_link"> <i class='bx bx-user nav_icon'></i> <span class="nav_name">Users</span> </a>
+                        <a asp-action="PendingItems" asp-controller="Products" class="nav_link"> <i class='bx bx-message-square-detail nav_icon'></i> <span class="nav_name">Messages</span> </a>
+                        <a asp-action="PendingItems" asp-controller="Products" class="nav_link"> <i class='bx bx-question-mark bx-tada bx-flip-vertical'></i><span class="nav_name">Pending Dockings</span> </a>
+                        <a href="#" class="nav_link"> <i class='bx bx-folder nav_icon'></i> <span class="nav_name">Files</span> </a>
+                        <a href="#" class="nav_link"> <i class='bx bx-bar-chart-alt-2 nav_icon'></i> <span class="nav_name">Stats</span> </a>
+                    </div>
+                </div>
+                <a asp-action="logout" asp-controller="Account" class="nav_link"> <i class='bx bx-log-out nav_icon'></i> <span class="nav_name">SignOut</span> </a>
+            </nav>
+        </div>
+    }
+  
 }
 
 <!-- Left Sidebar End -->
