--- a/DockingAdminPanel/Views/Doctors/Delete.cshtml
+++ b/DockingAdminPanel/Views/Doctors/Delete.cshtml
@@ -78,10 +78,10 @@
             @Html.DisplayFor(model => model.ZipCode)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Country)
+            @Html.DisplayNameFor(model => model.fee)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Country)
+            @Html.DisplayFor(model => model.fee)
         </dd>
     </dl>
     
