--- a/DockingAdminPanel/Views/Doctors/Edit.cshtml
+++ b/DockingAdminPanel/Views/Doctors/Edit.cshtml
@@ -69,9 +69,9 @@
                 <span asp-validation-for="ZipCode" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Country" class="control-label"></label>
-                <input asp-for="Country" class="form-control" />
-                <span asp-validation-for="Country" class="text-danger"></span>
+                <label asp-for="fee" class="control-label"></label>
+                <input asp-for="fee" type="number" class="form-control" />
+                <span asp-validation-for="fee" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
