--- a/DockingAdminPanel/Views/Doctors/Index.cshtml
+++ b/DockingAdminPanel/Views/Doctors/Index.cshtml
@@ -4,16 +4,28 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<link rel="stylesheet" href="https://cdn.datatables.net/1.13.6/css/jquery.dataTables.css" />
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
+<script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.js"></script>
+
+<div class="row col-md-2 col-2 col-lg-2 col-xl-2 col-sm-12">
+</div>
+<div class="card mt-5">
+
+    <div class="card-header">
+        All Doctors
+
+        <a class="btn btn-primary btn-block float-end" asp-action="Create"><i class='bx bx-add-to-queue bx-tada bx-flip-vertical '></i>Add Doctors</a>
+    </div>
+    <div class="card-body">
+        <div class="table-responsive">
+        <table id="myTable" class="display">
+
     <thead>
+               
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.FirstName)
+               FirstName
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.LastName)
@@ -46,7 +58,7 @@
                 @Html.DisplayNameFor(model => model.ZipCode)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Country)
+                @Html.DisplayNameFor(model => model.fee)
             </th>
             <th></th>
         </tr>
@@ -88,7 +100,7 @@
                 @Html.DisplayFor(modelItem => item.ZipCode)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Country)
+                @Html.DisplayFor(modelItem => item.fee)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
@@ -99,3 +111,14 @@
 }
     </tbody>
 </table>
+</div>
+</div>
+</div>
+<script>
+    let table = new DataTable('#myTable', {
+        responsive: true
+    });
+    $(document).ready(function () {
+        $('#myTable').DataTable();
+    });
+</script>
