--- a/DockingAdminPanel/Views/Patients/Create.cshtml
+++ b/DockingAdminPanel/Views/Patients/Create.cshtml
@@ -7,47 +7,54 @@
 <h1>Create</h1>
 
 <h4>Patient</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create">
+<div class="container mb-4">
+
+    <div class="form-wrap">
+       
+        <form asp-action="Create" method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
+			<div class="row">
+				<div class="form-group col-6">
                 <label asp-for="FirstName" class="control-label"></label>
                 <input asp-for="FirstName" class="form-control" />
                 <span asp-validation-for="FirstName" class="text-danger"></span>
             </div>
-            <div class="form-group">
+				<div class="form-group col-6">
                 <label asp-for="LastName" class="control-label"></label>
                 <input asp-for="LastName" class="form-control" />
                 <span asp-validation-for="LastName" class="text-danger"></span>
             </div>
-            <div class="form-group">
+			</div>
+			<div class="row">
+				<div class="form-group col-6">
                 <label asp-for="Email" class="control-label"></label>
                 <input asp-for="Email" class="form-control" />
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
-            <div class="form-group">
+				<div class="form-group col-6">
                 <label asp-for="PhoneNumber" class="control-label"></label>
                 <input asp-for="PhoneNumber" class="form-control" />
                 <span asp-validation-for="PhoneNumber" class="text-danger"></span>
             </div>
-            <div class="form-group">
+			</div>
+			<div class="row">
+				<div class="form-group col-6">
                 <label asp-for="DateOfBirth" class="control-label"></label>
                 <input asp-for="DateOfBirth" class="form-control" />
                 <span asp-validation-for="DateOfBirth" class="text-danger"></span>
             </div>
-            <div class="form-group">
+				<div class="form-group col-6">
                 <label asp-for="Address" class="control-label"></label>
                 <input asp-for="Address" class="form-control" />
                 <span asp-validation-for="Address" class="text-danger"></span>
             </div>
-            <div class="form-group">
+			</div>
+            @*<div class="form-group">
                 <label asp-for="City" class="control-label"></label>
                 <input asp-for="City" class="form-control" />
                 <span asp-validation-for="City" class="text-danger"></span>
-            </div>
-            <div class="form-group">
+            </div>*@
+         @*   <div class="form-group">
                 <label asp-for="State" class="control-label"></label>
                 <input asp-for="State" class="form-control" />
                 <span asp-validation-for="State" class="text-danger"></span>
@@ -61,13 +68,14 @@
                 <label asp-for="Country" class="control-label"></label>
                 <input asp-for="Country" class="form-control" />
                 <span asp-validation-for="Country" class="text-danger"></span>
-            </div>
-            <div class="form-group">
+            </div>*@
+			<div class="row">
+				<div class="form-group col-6">
                 <label asp-for="MedicalRecordNumber" class="control-label"></label>
                 <input asp-for="MedicalRecordNumber" class="form-control" />
                 <span asp-validation-for="MedicalRecordNumber" class="text-danger"></span>
             </div>
-            <div class="form-group">
+        @*    <div class="form-group">
                 <label asp-for="InsuranceProvider" class="control-label"></label>
                 <input asp-for="InsuranceProvider" class="form-control" />
                 <span asp-validation-for="InsuranceProvider" class="text-danger"></span>
@@ -76,20 +84,177 @@
                 <label asp-for="PolicyNumber" class="control-label"></label>
                 <input asp-for="PolicyNumber" class="form-control" />
                 <span asp-validation-for="PolicyNumber" class="text-danger"></span>
-            </div>
-            <div class="form-group">
+            </div>*@
+				<div class="form-group col-6">
                 <label asp-for="Illness" class="control-label"></label>
                 <input asp-for="Illness" class="form-control" />
                 <span asp-validation-for="Illness" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
+			</div>
+			<div class="form-group">
+				<label class="control-label"></label>
+				<select name="DoctorId" class="form-control">
+					<option value="">Select a Doctor</option>
+					@if (Model.Doctors.Count()>0)
+					{
+						@foreach (var item in Model.Doctors)
+						{
+							<option asp-for="@Model.Doctors" value="@item.Id">@item.FullName</option>
+						}
+					}
+				</select>
+				<span for="roles" class="text-danger"></span>
+			</div>
+			<div class="form-group">
+				<input type="submit" value="Create" class="btn btn-primary" />
+				<a asp-action="Index" class="btn btn-warning">Back to List</a>
+			</div>
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
 
+
+<style>
+	@@import url('https://fonts.googleapis.com/css?family=Roboto:400,500,700,900&display=swap');
+
+	body {
+		padding: 100px 0;
+		background: #ecf0f4;
+		width: 100%;
+		height: 80%;
+		font-size: 18px;
+		line-height: 1.5;
+		font-family: 'Roboto', sans-serif;
+		color: #222;
+	}
+
+	.container {
+		max-width: 80%;
+		width: 100%;
+	}
+
+	h1 {
+		font-weight: 700;
+		font-size: 45px;
+		font-family: 'Roboto', sans-serif;
+	}
+
+	.header {
+		margin-bottom: 80px;
+	}
+
+	#description {
+		font-size: 24px;
+	}
+
+	.form-wrap {
+		background: rgba(255,255,255,1);
+		width: 100%;
+		max-width: 850px;
+		padding: 50px;
+		margin: 0 auto;
+		position: relative;
+		-webkit-border-radius: 10px;
+		-moz-border-radius: 10px;
+		border-radius: 10px;
+		-webkit-box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.15);
+		-moz-box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.15);
+		box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.15);
+	}
+
+		.form-wrap:before {
+			content: "";
+			width: 90%;
+			height: calc(100% + 60px);
+			left: 0;
+			right: 0;
+			margin: 0 auto;
+			position: absolute;
+			top: -30px;
+			background: #0e1c36;
+			z-index: -1;
+			opacity: 0.8;
+			-webkit-border-radius: 10px;
+			-moz-border-radius: 10px;
+			border-radius: 10px;
+			-webkit-box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.15);
+			-moz-box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.15);
+			box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.15);
+		}
+
+	.form-group {
+		margin-bottom: 25px;
+	}
+
+		.form-group > label {
+			display: block;
+			font-size: 18px;
+			color: #000;
+		}
+
+	.custom-control-label {
+		color: #000;
+		font-size: 16px;
+	}
+
+	.form-control {
+		height: 50px;
+		background: #ecf0f4;
+		border-color: transparent;
+		padding: 0 15px;
+		font-size: 16px;
+		-webkit-transition: all 0.3s ease-in-out;
+		-moz-transition: all 0.3s ease-in-out;
+		-o-transition: all 0.3s ease-in-out;
+		transition: all 0.3s ease-in-out;
+	}
+
+		.form-control:focus {
+			border-color: #0e1c36;
+			-webkit-box-shadow: 0px 0px 20px rgba(0, 0, 0, .1);
+			-moz-box-shadow: 0px 0px 20px rgba(0, 0, 0, .1);
+			box-shadow: 0px 0px 20px rgba(0, 0, 0, .1);
+		}
+
+	textarea.form-control {
+		height: 160px;
+		padding-top: 15px;
+		resize: none;
+	}
+
+	.btn {
+		padding: .657rem .75rem;
+		font-size: 18px;
+		letter-spacing: 0.050em;
+		-webkit-transition: all 0.3s ease-in-out;
+		-moz-transition: all 0.3s ease-in-out;
+		-o-transition: all 0.3s ease-in-out;
+		transition: all 0.3s ease-in-out;
+	}
+
+
+
+	.btn-primary:focus, .btn-primary.focus {
+		color: #00bcd9;
+		background-color: #ffffff;
+		border-color: #00bcd9;
+		-webkit-box-shadow: 0px 0px 20px rgba(0, 0, 0, .1);
+		-moz-box-shadow: 0px 0px 20px rgba(0, 0, 0, .1);
+		box-shadow: 0px 0px 20px rgba(0, 0, 0, .1);
+	}
+
+	.btn-primary:not(:disabled):not(.disabled):active, .btn-primary:not(:disabled):not(.disabled).active,
+	.show > .btn-primary.dropdown-toggle {
+		color: #00bcd9;
+		background-color: #ffffff;
+		border-color: #00bcd9;
+	}
+
+		.btn-primary:not(:disabled):not(.disabled):active:focus, .btn-primary:not(:disabled):not(.disabled).active:focus,
+		.show > .btn-primary.dropdown-toggle:focus {
+			-webkit-box-shadow: 0px 0px 20px rgba(0, 0, 0, .1);
+			-moz-box-shadow: 0px 0px 20px rgba(0, 0, 0, .1);
+			box-shadow: 0px 0px 20px rgba(0, 0, 0, .1);
+		}
+</style>
