--- a/DockingAdminPanel/Views/Account/Login.cshtml
+++ b/DockingAdminPanel/Views/Account/Login.cshtml
@@ -3,14 +3,14 @@
 <div class="container">
     <div class="row">
         <div class="col-md-6 offset-md-3">
-            <h2 class="text-center text-dark mt-5">Login Form</h2>
-            <div class="text-center mb-5 text-dark">Made with bootstrap</div>
+            <h2 class="text-center text-dark mt-5">Made For A+ Clinic</h2>
+            
             <div class="card my-5">
 
                 <form id="account" method="post" asp-action="login" asp-controller="account" class="card-body cardbody-color p-lg-5">
 
                     <div class="text-center">
-                        <img src="https://cdn.pixabay.com/photo/2016/03/31/19/56/avatar-1295397__340.png" class="img-fluid profile-image-pic img-thumbnail rounded-circle my-3"
+                        <img src="~/lab/logo.jpeg" class="img-fluid profile-image-pic img-thumbnail rounded-circle my-3"
                              width="200px" alt="profile">
                     </div>
 
@@ -40,13 +40,13 @@
                         <button id="login-submit" type="submit" class="btn btn-color px-5 mb-5 w-100">Log in</button>
                 </div>
     
-                    <div id="emailHelp" class="form-text text-center mb-5 text-dark">
+                   @* <div id="emailHelp" class="form-text text-center mb-5 text-dark">
                         Not
                         Registered? <a href="#" class="text-dark fw-bold">
                             Create an
                             Account
                         </a>
-                    </div>
+                    </div>*@
                 </form>
             </div>
 
