--- a/DockingAdminPanel/Views/Doctors/Details.cshtml
+++ b/DockingAdminPanel/Views/Doctors/Details.cshtml
@@ -77,10 +77,10 @@
             @Html.DisplayFor(model => model.ZipCode)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.fee)
+            @Html.DisplayNameFor(model => model.DoctorFee)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.fee)
+            @Html.DisplayFor(model => model.DoctorFee)
         </dd>
     </dl>
 </div>
