--- a/DockingAdminPanel/Views/Home/Index.cshtml
+++ b/DockingAdminPanel/Views/Home/Index.cshtml
@@ -2,8 +2,9 @@
 @{
     ViewData["Title"] = "Home Page";
 }
-
+<a class="btn btn-primary btn-block float-end" asp-action="ShowFormData"><i class='bx bx-add-to-queue bx-tada bx-flip-vertical '></i>Add Students</a>
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
+
