--- a/DockingAdminPanel/Views/Doctors/Create.cshtml
+++ b/DockingAdminPanel/Views/Doctors/Create.cshtml
@@ -78,11 +78,23 @@
                 <span asp-validation-for="ZipCode" class="text-danger"></span>
             </div>
 			</div>
-            <div class="form-group">
-                <label asp-for="fee" class="control-label"></label>
-                <input asp-for="fee" type="number" class="form-control" />
-                <span asp-validation-for="fee" class="text-danger"></span>
+			<div class="row">
+				<div class="form-group col-4">
+                <label asp-for="TotalFee" class="control-label"></label>
+					<input asp-for="TotalFee" type="number" class="form-control" />
+					<span asp-validation-for="TotalFee" class="text-danger"></span>
             </div>
+				<div class="form-group col-4">
+					<label asp-for="DoctorFee" class="control-label"></label>
+					<input asp-for="DoctorFee" type="number" class="form-control" />
+					<span asp-validation-for="DoctorFee" class="text-danger"></span>
+				</div>
+				<div class="form-group col-4">
+					<label asp-for="ClinicCharges" class="control-label"></label>
+					<input asp-for="ClinicCharges" type="number" class="form-control" />
+					<span asp-validation-for="ClinicCharges" class="text-danger"></span>
+				</div>
+			</div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
 				<a asp-action="Index" class="btn btn-warning">Back to List</a>
