--- a/DockingAdminPanel/Views/Patients/Create.cshtml
+++ b/DockingAdminPanel/Views/Patients/Create.cshtml
@@ -11,7 +11,7 @@
 
     <div class="form-wrap">
        
-        <form asp-action="Create" method="post">
+        <form asp-action="Create" method="post" id="addpatientappointment">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 			<div class="row">
 				<div class="form-group col-6">
@@ -49,42 +49,14 @@
                 <span asp-validation-for="Address" class="text-danger"></span>
             </div>
 			</div>
-            @*<div class="form-group">
-                <label asp-for="City" class="control-label"></label>
-                <input asp-for="City" class="form-control" />
-                <span asp-validation-for="City" class="text-danger"></span>
-            </div>*@
-         @*   <div class="form-group">
-                <label asp-for="State" class="control-label"></label>
-                <input asp-for="State" class="form-control" />
-                <span asp-validation-for="State" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ZipCode" class="control-label"></label>
-                <input asp-for="ZipCode" class="form-control" />
-                <span asp-validation-for="ZipCode" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Country" class="control-label"></label>
-                <input asp-for="Country" class="form-control" />
-                <span asp-validation-for="Country" class="text-danger"></span>
-            </div>*@
+
 			<div class="row">
 				<div class="form-group col-6">
                 <label asp-for="MedicalRecordNumber" class="control-label"></label>
                 <input asp-for="MedicalRecordNumber" class="form-control" />
                 <span asp-validation-for="MedicalRecordNumber" class="text-danger"></span>
             </div>
-        @*    <div class="form-group">
-                <label asp-for="InsuranceProvider" class="control-label"></label>
-                <input asp-for="InsuranceProvider" class="form-control" />
-                <span asp-validation-for="InsuranceProvider" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="PolicyNumber" class="control-label"></label>
-                <input asp-for="PolicyNumber" class="form-control" />
-                <span asp-validation-for="PolicyNumber" class="text-danger"></span>
-            </div>*@
+     
 				<div class="form-group col-6">
                 <label asp-for="Illness" class="control-label"></label>
                 <input asp-for="Illness" class="form-control" />
@@ -105,9 +77,18 @@
 				</select>
 				<span for="roles" class="text-danger"></span>
 			</div>
+			<div class="form-group form-check">
+				<label class="form-check-label">
+					<input class="form-check-input" asp-for="External" /> External
+				</label>
+			</div>
+
+		 
 			<div class="form-group">
-				<input type="submit" value="Create" class="btn btn-primary" />
-				<a asp-action="Index" class="btn btn-warning">Back to List</a>
+				<button id="PaidAppointment" type="button" class="btn btn-primary btn-block mt-5 rounded-pill font-size-16" onclick="onsubmitClick()">PaidAppointment</button>
+				<button id="Appointment" type="button" class="btn btn-primary btn-block mt-5 rounded-pill font-size-16" onclick="onsubmitUnpaidClick()">Appointment</button>
+ 
+				<a asp-action="Index" class="btn btn-primary btn-block mt-5 rounded-pill font-size-16">Back to List</a>
 			</div>
         </form>
     </div>
@@ -115,6 +96,27 @@
 
 
 
+
+<script>
+	function onsubmitClick(e) {
+
+	 
+		$('#PaymentStatus').val("true");
+
+		$("#addpatientappointment").attr('action', 'CreatePaid');
+		$("#addpatientappointment").submit();
+
+	}
+	function onsubmitUnpaidClick(e) {
+
+
+	 
+
+		$("#addpatientappointment").attr('action', 'Create');
+		$("#addpatientappointment").submit();
+
+	}
+</script>
 <style>
 	@@import url('https://fonts.googleapis.com/css?family=Roboto:400,500,700,900&display=swap');
 
