--- a/DockingAdminPanel/Views/Shared/Components/MenuSideBar/Default.cshtml
+++ b/DockingAdminPanel/Views/Shared/Components/MenuSideBar/Default.cshtml
@@ -63,10 +63,14 @@
                 <div>
                     <a href="#" class="nav_logo"> <i class='bx bx-layer nav_logo-icon'></i> <span class="nav_logo-name">Admin Panel</span> </a>
                     <div class="nav_list">
+                        <a asp-action="index" asp-controller="PatientTokens" class="nav_link "><i class='bx bx-clinic'></i>  <span class="nav_name">DailyCounter</span> </a>
                         <a asp-action="index" asp-controller="Doctors" class="nav_link "><i class='bx bx-clinic'></i>  <span class="nav_name">Doctors</span> </a>
+                        <a asp-action="index" asp-controller="LabItems" class="nav_link"><i class='bx bx-handicap'></i><span class="nav_name">Lab Items</span> </a>
+                        <a asp-action="index" asp-controller="Patients" class="nav_link"><i class='bx bx-handicap'></i><span class="nav_name">Patients Appointments</span> </a>
+                        <a asp-action="CollectTestSamples" asp-controller="Patients" class="nav_link"><i class='bx bx-handicap'></i><span class="nav_name">Lab Appointments</span> </a>
                         <a asp-action="allusers" asp-controller="Account" class="nav_link"> <i class='bx bx-user nav_icon'></i> <span class="nav_name">Users</span> </a>
                         <a asp-action="PendingItems" asp-controller="Products" class="nav_link"> <i class='bx bx-message-square-detail nav_icon'></i> <span class="nav_name">Messages</span> </a>
-                        <a asp-action="index" asp-controller="Patients" class="nav_link"><i class='bx bx-handicap'></i><span class="nav_name">Patients</span> </a>
+
                         <a href="#" class="nav_link"> <i class='bx bx-folder nav_icon'></i> <span class="nav_name">Files</span> </a>
                         <a href="#" class="nav_link"> <i class='bx bx-bar-chart-alt-2 nav_icon'></i> <span class="nav_name">Stats</span> </a>
                     </div>
