--- a/DockingAdminPanel/Views/Patients/Create.cshtml
+++ b/DockingAdminPanel/Views/Patients/Create.cshtml
@@ -4,92 +4,82 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
 
-<h4>Patient</h4>
-<div class="container mb-4">
 
+ <div class="container mb-4">
     <div class="form-wrap">
-       
         <form asp-action="Create" method="post" id="addpatientappointment">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-			<div class="row">
-				<div class="form-group col-6">
-                <label asp-for="FirstName" class="control-label"></label>
-                <input asp-for="FirstName" class="form-control" />
-                <span asp-validation-for="FirstName" class="text-danger"></span>
+            <div class="row">
+                <div class="form-group col-md-4">
+                    <label asp-for="FirstName" class="control-label">Name</label>
+                    <input asp-for="FirstName" class="form-control" />
+                    <span asp-validation-for="FirstName" class="text-danger"></span>
+                </div>
+                <div class="form-group col-md-4">
+                    <label asp-for="Age" class ="control-label">Age</label>
+                    <input asp-for="Age" class="form-control" />
+                    <span asp-validation-for="Age" class="text-danger"></span>
+                </div>
+				<div class="form-group col-md-4 mt-5">
+					
+					<div class="form-check form-check-inline">
+						<input type="radio" id="male" name="Sex" value="Male" @(Model.Sex == "Male" ? "checked" : "")>
+						<label for="male" class="form-check-label">Male</label>
+					</div>
+					<div class="form-check form-check-inline">
+						<input type="radio" id="female" name="Sex" value="Female" @(Model.Sex == "Female" ? "checked" : "")>
+						<label for="female" class="form-check-label">Female</label>
+					</div>
+				</div>
             </div>
-				<div class="form-group col-6">
-                <label asp-for="LastName" class="control-label"></label>
-                <input asp-for="LastName" class="form-control" />
-                <span asp-validation-for="LastName" class="text-danger"></span>
+           
+            <div class="row">
+                <div class="form-group col-md-6">
+                    <label asp-for="PhoneNumber" class="control-label">Phone Number</label>
+                    <input asp-for="PhoneNumber" class="form-control" />
+                    <span asp-validation-for="PhoneNumber" class="text-danger"></span>
+                </div>
+                <div class="form-group col-md-6">
+                    <label asp-for="Address" class="control-label">Address</label>
+                    <input asp-for="Address" class="form-control" />
+                    <span asp-validation-for="Address" class="text-danger"></span>
+                </div>
             </div>
-			</div>
-			<div class="row">
-				<div class="form-group col-6">
-                <label asp-for="Email" class="control-label"></label>
-                <input asp-for="Email" class="form-control" />
-                <span asp-validation-for="Email" class="text-danger"></span>
+            <div class="row">
+                <div class="form-group col-md-6">
+                    <label asp-for="Illness" class="control-label">Illness</label>
+                    <input asp-for="Illness" class="form-control" />
+                    <span asp-validation-for="Illness" class="text-danger"></span>
+                </div>
+                <div class="form-group col-md-6">
+                    <label asp-for="DoctorId" class="control-label">Doctor</label>
+                    <select asp-for="DoctorId" class="form-control">
+                        <option value="">Select a Doctor</option>
+                        @if (Model.Doctors.Count() > 0)
+                        {
+                            @foreach (var item in Model.Doctors)
+                            {
+                                <option value="@item.Id">@item.FullName</option>
+                            }
+                        }
+                    </select>
+                    <span asp-validation-for="DoctorId" class="text-danger"></span>
+                </div>
             </div>
-				<div class="form-group col-6">
-                <label asp-for="PhoneNumber" class="control-label"></label>
-                <input asp-for="PhoneNumber" class="form-control" />
-                <span asp-validation-for="PhoneNumber" class="text-danger"></span>
+            <div class="form-group">
+                <label class="control-label"></label>
+                <div class="form-check">
+                    <label class="form-check-label">
+                        <input class="form-check-input" asp-for="External" /> External
+                    </label>
+                </div>
             </div>
-			</div>
-			<div class="row">
-				<div class="form-group col-6">
-                <label asp-for="DateOfBirth" class="control-label"></label>
-                <input asp-for="DateOfBirth" class="form-control" />
-                <span asp-validation-for="DateOfBirth" class="text-danger"></span>
+            <div class="form-group">
+                <button id="PaidAppointment" type="button" class="btn btn-primary btn-block rounded-pill font-size-16" onclick="onsubmitClick()">Paid Appointment</button>
+                <button id="Appointment" type="button" class="btn btn-primary btn-block rounded-pill font-size-16" onclick="onsubmitUnpaidClick()">Appointment</button>
+                <a asp-action="Index" class="btn btn-primary btn-block rounded-pill font-size-16">Back to List</a>
             </div>
-				<div class="form-group col-6">
-                <label asp-for="Address" class="control-label"></label>
-                <input asp-for="Address" class="form-control" />
-                <span asp-validation-for="Address" class="text-danger"></span>
-            </div>
-			</div>
-
-			<div class="row">
-				<div class="form-group col-6">
-                <label asp-for="MedicalRecordNumber" class="control-label"></label>
-                <input asp-for="MedicalRecordNumber" class="form-control" />
-                <span asp-validation-for="MedicalRecordNumber" class="text-danger"></span>
-            </div>
-     
-				<div class="form-group col-6">
-                <label asp-for="Illness" class="control-label"></label>
-                <input asp-for="Illness" class="form-control" />
-                <span asp-validation-for="Illness" class="text-danger"></span>
-            </div>
-			</div>
-			<div class="form-group">
-				<label class="control-label"></label>
-				<select name="DoctorId" class="form-control">
-					<option value="">Select a Doctor</option>
-					@if (Model.Doctors.Count()>0)
-					{
-						@foreach (var item in Model.Doctors)
-						{
-							<option asp-for="@Model.Doctors" value="@item.Id">@item.FullName</option>
-						}
-					}
-				</select>
-				<span for="roles" class="text-danger"></span>
-			</div>
-			<div class="form-group form-check">
-				<label class="form-check-label">
-					<input class="form-check-input" asp-for="External" /> External
-				</label>
-			</div>
-
-		 
-			<div class="form-group">
-				<button id="PaidAppointment" type="button" class="btn btn-primary btn-block mt-5 rounded-pill font-size-16" onclick="onsubmitClick()">PaidAppointment</button>
-				<button id="Appointment" type="button" class="btn btn-primary btn-block mt-5 rounded-pill font-size-16" onclick="onsubmitUnpaidClick()">Appointment</button>
- 
-				<a asp-action="Index" class="btn btn-primary btn-block mt-5 rounded-pill font-size-16">Back to List</a>
-			</div>
         </form>
     </div>
 </div>
@@ -97,7 +87,7 @@
 
 
 
-<script>
+		<script>
 	function onsubmitClick(e) {
 
 	 
