--- a/DockingAdminPanel/Views/Patients/Index.cshtml
+++ b/DockingAdminPanel/Views/Patients/Index.cshtml
@@ -21,21 +21,23 @@
     <thead>
         <tr>
             <th>Status</th>
+                        <th>
+                            Token Number
+                        </th>
             <th>
-                @Html.DisplayNameFor(model => model.FirstName)
+               Name
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.LastName)
+                @Html.DisplayNameFor(model => model.Sex)
             </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Email)
-            </th>
+          
+                        <th>
+                            @Html.DisplayNameFor(model => model.Age)
+                        </th>
             <th>
                 @Html.DisplayNameFor(model => model.PhoneNumber)
             </th>
-            <th>
-                @Html.DisplayNameFor(model => model.DateOfBirth)
-            </th>
+          
             <th>
                 @Html.DisplayNameFor(model => model.Address)
             </th>
@@ -71,22 +73,23 @@
                         <tr data-fullname="@item.FullName" data-fee="@item.Fee" data-token="@item.TokenNumber">
                             <td style=@(item.PaymentStatus==true?"background-color:green":"background-color:red")>
                 @(item.PaymentStatus==true?"Paid":"UnPaid")
-            </td>                
+            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.TokenNumber)
+                            </td>
             <td>
                 @Html.DisplayFor(modelItem => item.FirstName)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.LastName)
+                @Html.DisplayFor(modelItem => item.Sex)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Email)
+                @Html.DisplayFor(modelItem => item.Age)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.PhoneNumber)
             </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.DateOfBirth)
-            </td>
+         
             <td>
                 @Html.DisplayFor(modelItem => item.Address)
             </td>
@@ -97,7 +100,7 @@
             </td>
             
             <td>
-                                <a asp-action="Print" class="btn btn-outline-success">Print</a>
+                                <a asp-action="Print" asp-route-id="@item.Id" class="btn btn-outline-success">Print</a>
                 <a asp-action="AddTestsAppointments" class="btn btn-outline-primary" asp-route-id="@item.Id">Add Tests</a> |
                                 <a asp-action="Edit" class="btn btn-outline-secondary" asp-route-id="@item.Id">Edit</a> |
                                 <a asp-action="Details" class="btn btn-outline-warning" asp-route-id="@item.Id">Details</a> |
