--- a/DockingAdminPanel/Views/Patients/Index.cshtml
+++ b/DockingAdminPanel/Views/Patients/Index.cshtml
@@ -69,7 +69,8 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
+@foreach (var item in Model) 
+{
                         <tr data-fullname="@item.FullName" data-fee="@item.Fee" data-token="@item.TokenNumber">
                             <td style=@(item.PaymentStatus==true?"background-color:green":"background-color:red")>
                 @(item.PaymentStatus==true?"Paid":"UnPaid")
@@ -100,7 +101,7 @@
             </td>
             
             <td>
-                                <a asp-action="Print" asp-route-id="@item.Id" class="btn btn-outline-success">Print</a>
+                                <a onclick="printReceipt('@item')" class="btn btn-success" style="background-color:#fcbf49">Pay</a>
                 <a asp-action="AddTestsAppointments" class="btn btn-outline-primary" asp-route-id="@item.Id">Add Tests</a> |
                                 <a asp-action="Edit" class="btn btn-outline-secondary" asp-route-id="@item.Id">Edit</a> |
                                 <a asp-action="Details" class="btn btn-outline-warning" asp-route-id="@item.Id">Details</a> |
@@ -238,22 +239,82 @@
 //}
 
  function printReceipt(element) {
-    var tr = element.closest('tr'); // Find the parent tr element
-    var fullname = tr.getAttribute('data-fullname');
-    var fee = tr.getAttribute('data-fee');
-    var token = tr.getAttribute('data-token');
+    //var tr = element.closest('tr'); // Find the parent tr element
+    //var fullname = tr.getAttribute('data-fullname');
+    //var fee = tr.getAttribute('data-fee');
+    //var token = tr.getAttribute('data-token');
 
-    console.log(fullname);
+   
 
     var printContent = `
-        <div class="receipt">
-            <h2>Receipt</h2>
-            <hr />
-            <p><strong>Name:</strong> ${fullname}</p>
-            <p><strong>Fee:</strong> ${fee}</p>
-            <p><strong>Token:</strong> ${token}</p>
-            <!-- Add other dynamic content here -->
-        </div>
+                    <header>
+                <h1>Invoice</h1>
+                <address contenteditable>
+                    <p>Jonathan Neal</p>
+                    <p>101 E. Chapman Ave<br>Orange, CA 92866</p>
+                    <p>(800) 555-1234</p>
+                </address>
+              
+            </header>
+            <article>
+                <h1>Recipient</h1>
+
+                <table   class="inventory">
+                    <tr>
+                        <th><span contenteditable>Invoice #</span></th>
+                        <td><span contenteditable>101138</span></td>
+                    </tr>
+                    <tr>
+                        <th><span contenteditable>Date</span></th>
+                        <td><span contenteditable>January 1, 2012</span></td>
+                    </tr>
+                    <tr>
+                        <th><span contenteditable>Amount Due</span></th>
+                        <td><span id="prefix" contenteditable>$</span><span>600.00</span></td>
+                    </tr>
+                </table>
+                <table class="inventory">
+                    <thead>
+                        <tr>
+                            <th><span contenteditable>Item</span></th>
+                            <th><span contenteditable>Description</span></th>
+                            <th><span contenteditable>Rate</span></th>
+                            <th><span contenteditable>Quantity</span></th>
+                            <th><span contenteditable>Price</span></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td><a class="cut">-</a><span contenteditable>Front End Consultation</span></td>
+                            <td><span contenteditable>Experience Review</span></td>
+                            <td><span data-prefix>$</span><span contenteditable>150.00</span></td>
+                            <td><span contenteditable>4</span></td>
+                            <td><span data-prefix>$</span><span>600.00</span></td>
+                        </tr>
+                    </tbody>
+                </table>
+                <a class="add">+</a>
+                <table class="balance">
+                    <tr>
+                        <th><span contenteditable>Total</span></th>
+                        <td><span data-prefix>$</span><span>600.00</span></td>
+                    </tr>
+                    <tr>
+                        <th><span contenteditable>Amount Paid</span></th>
+                        <td><span data-prefix>$</span><span contenteditable>0.00</span></td>
+                    </tr>
+                    <tr>
+                        <th><span contenteditable>Balance Due</span></th>
+                        <td><span data-prefix>$</span><span>600.00</span></td>
+                    </tr>
+                </table>
+            </article>
+            <aside>
+                <h1><span contenteditable>Additional Notes</span></h1>
+                <div contenteditable style="background-color:#000;color:#fff">
+                    <p>A finance charge of 1.5% will be made on unpaid balances after 30 days.</p>
+                </div>
+            </aside>
     `;
 
     var originalContent = document.body.innerHTML;
@@ -261,43 +322,158 @@
 
     // Apply CSS styles to the receipt content
     var style = document.createElement('style');
-    style.innerHTML = `
-        @@page {
-            size: auto; /* Use the default page size */
-            margin: 0;
-        }
-        body {
-            margin: 0;
-            padding: 0;
-            display: flex;
-            justify-content: center; /* Center horizontally */
-            align-items: center; /* Center vertically */
-        }
-        .receipt {
-            font-family: Arial, sans-serif;
-            background-color: #f2f2f2;
-            padding: 10px; /* Increase padding for better readability */
-           
-            max-width: 60%; /* Adjust the width to fit better on the page */
-            text-align: center;
-            margin: 0 auto; /* Center the receipt horizontally on the page */
-        }
-        h2 {
-            font-size: 18px;
-        }
-        p {
-            font-size: 18px;
-            margin: 4px 0;
-        }
-        hr {
-            border: 0px solid #ccc;
-            margin: 8px 0;
-        }
+    style.innerHTML = ` /* reset */
+
+*
+{
+	border: 0;
+	box-sizing: content-box;
+	color: inherit;
+	font-family: inherit;
+	font-size: inherit;
+	font-style: inherit;
+	font-weight: inherit;
+	line-height: inherit;
+	list-style: none;
+	margin: 0;
+	padding: 0;
+	text-decoration: none;
+	vertical-align: top;
+}
+
+/* content editable */
+
+*[contenteditable] { border-radius: 0.5em; min-width: 0em; outline: 0; }
+
+*[contenteditable] { cursor: pointer; }
+
+*[contenteditable]:hover, *[contenteditable]:focus, td:hover *[contenteditable], td:focus *[contenteditable], img.hover { background: #DEF; box-shadow: 0 0 0em 0.5em #DEF; }
+
+span[contenteditable] { display: inline-block; }
+
+/* heading */
+
+h1 { font: bold 100% sans-serif; letter-spacing: 0.1em; text-align: center; text-transform: uppercase; }
+
+/* table */
+
+table { font-size: 65%;font: bold ; table-layout: fixed; width: 120%; }
+table { border-collapse: separate; border-spacing: 2px; }
+th, td { border-width: 1px; padding: 0.5em; position: relative; text-align: left; }
+th, td { border-radius: 0.25em; border-style: solid; }
+th { background: #000; color:#fff; border-color: #BBB; }
+td { border-color: #DDD;background: #111;font: bold; color:#fff; }
+
+/* page */
+
+html { font: 15px/1 'Roboto',font: bold, Roboto; overflow: auto; padding: 0.2mm; }
+html { background: #999; cursor: default; }
+
+body { box-sizing: border-box; height: ; margin: 0 auto; overflow: hidden;  width: 80mm; }
+body { background: #FFF; border-radius: 1px; box-shadow: 0 0 1in -0.25in rgba(0, 0, 0, 0.5); }
+
+/* header */
+
+header { margin: 0 0 1em; }
+header:after { clear: both; content: ""; display: table; }
+
+header h1 { background: #000; border-radius: 0.25em; color: #FFF; margin: 0 0 0em; padding: 0.5em 0; }
+header address { float: left; font-size: 75%; font-style: bold; line-height: 0.95; margin: 0.2em 0.1em 0.1em 0.1em;font: bold }
+header address p { margin: 0 0 0.25em; }
+header span, header img { display: block; float: right; }
+header span { margin: 0 0 0em 0em; max-height: 25%; max-width: 60%; position: relative; }
+header img { max-height: 100%; max-width: 100%; }
+header input { cursor: pointer; -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=0)"; height: 100%; left: 0; opacity: 0; position: absolute; top: 0; width: 100%; }
+
+/* article */
+
+article, article address, table.meta, table.inventory { margin: 0 0 0em; }
+article:after { clear: both; content: ""; display: table; }
+article h1 { clip: rect(0 0 0 0); position: absolute; }
+
+article address { float: left; font-size: 125%; font-weight: bold; }
+
+/* table meta & balance */
+
+table.meta, table.balance { float: right; width: 36%; }
+table.meta:after, table.balance:after { clear: both; content: ""; display: table; }
+
+/* table meta */
+
+table.meta th { width: 40%; }
+table.meta td { width: 60%; }
+
+/* table items */
+
+table.inventory { clear: both; width: 100%; }
+table.inventory th { font-weight: bold; text-align: center; }
+
+table.inventory td:nth-child(1) { width: 26%; }
+table.inventory td:nth-child(2) { width: 38%; }
+table.inventory td:nth-child(3) { text-align: right; width: 12%; }
+table.inventory td:nth-child(4) { text-align: right; width: 12%; }
+table.inventory td:nth-child(5) { text-align: right; width: 12%; }
+
+/* table balance */
+
+table.balance th, table.balance td { width: 50%; }
+table.balance td { text-align: right; }
+
+/* aside */
+
+aside h1 { border: none; border-width: 0 0 1px; margin: 0 0 1em; }
+aside h1 { border-color: #999; border-bottom-style: solid; }
+
+/* javascript */
+
+.add, .cut
+{
+	border-width: 1px;
+	display: block;
+	font-size: .8rem;
+	padding: 0.25em 0.5em;	
+	float: left;
+	text-align: center;
+	width: 0.6em;
+}
+
+.add, .cut
+{
+	background: #9AF;
+	box-shadow: 0 1px 2px rgba(0,0,0,0.2);
+	background-image: -moz-linear-gradient(#00ADEE 5%, #0078A5 100%);
+	background-image: -webkit-linear-gradient(#00ADEE 5%, #0078A5 100%);
+	border-radius: 0.5em;
+	border-color: #0076A3;
+	color: #FFF;
+	cursor: pointer;
+	font-weight: bold;
+	text-shadow: 0 -1px 2px rgba(0,0,0,0.333);
+}
+
+.add { margin: -2.5em 0 0; }
+
+.add:hover { background: #00ADEE; }
+
+.cut { opacity: 0; position: absolute; top: 0; left: -1.5em; }
+.cut { -webkit-transition: opacity 100ms ease-in; }
+
+tr:hover .cut { opacity: 1; }
+
+@@media print {
+	* { -webkit-print-color-adjust: exact; }
+	html { background: none; padding: 0; }
+	body { box-shadow: none; margin: 0; }
+	span:empty { display: none; }
+	.add, .cut { display: none; }
+}
+
+@@page { margin: 0; }
     `;
     document.head.appendChild(style);
 
     // Print the content
-    window.print();
+        window.print({ silent: true, onload: function () { window.location.reload(); } });
 
     // Restore the original content
     document.body.innerHTML = originalContent;
